# fediview

./: .env.example  .gitignore  Dockerfile  Dockerfile-huey-worker  Dockerfile-modal  Dockerfile-q2-worker  Dockerfile-rq-worker  Dockerfile-worker  LICENSE  README.md  captain-definition-huey-worker  captain-definition-q2-worker  captain-definition-rq-worker  captain-definition-worker  conftest.py  docker-entrypoint.sh  justfile  manage.py  pyproject.toml
.github/workflows/: deploy-q2-worker.yml  deploy-web.yml  deploy.yml
account/: admin.py  models.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_account_created_account_modified_instance_created_and_more.py  0002_profile.py  0003_profile_last_retrieval.py  0004_profile_has_plus.py  0005_profile_language.py  0006_account_account_id_profile_indexing_type_and_more.py  0007_account_bookmarks_count_account_favorites_count_and_more.py  0008_profile_last_indexed_at.py  0009_profile_posts_vectors.py  0010_profile_generate_recommendations.py  0011_githubaccount.py  0012_profile_send_daily_digest.py  0013_profile_last_sample_email_sent_at.py  0014_profile_daily_digest_am_profile_daily_digest_hour_and_more.py  0015_profile_daily_digest_minute.py  0016_profile_last_index_error.py
account/templates/account/: _plus_callout.html  account.html  login.html  unsubscribe.html
activity/: apps.py  indexer.py  models.py  postgres_indexer.py  tasks.py  text_embeddings_retriever.py  urls.py  views.py
activity/management/commands/: index_posts.py
activity/migrations/: 0001_initial.py  0002_initial.py  0003_postvectors.py
activity/templates/activity/: activity.html  search.html
content/: best-tools-for-mastodon.md  changelog.md  faq.md  how-to-create-an-application-token-for-mastodon.md  tools-for-mastodon.md  what-is-mastodon.md  what-is-the-fediverse.md
digest/: api.py  digester.py  email_sender.py  formatters.py  models.py  scorers.py  thresholds.py
digest/management/commands/: sanitize_generated_emails.py  send_emails.py
digest/templates/digest/: digest.html
mastodon_digest/: api.py  formatters.py  models.py  run.py  scorers.py  thresholds.py
modal/: text_embeddings.py
modal_runner/: text_embeddings.py
project/: jobs.py  settings.py  urls.py
sql/: plus.sql
static/css/: base.css  stepper.css  tooltip.css  utils.css
static/js/: base.js
static/toastify/1.12.0/: toastify.min.css
tests/account/: fixtures.py
tests/account/views/: test_login.py
tests/activity/text_embeddings_retriever/: test_get_similarity_to_posts_vectors.py
tests/digest/digester/: test_add_following.py  test_build_digest.py  test_clean_url.py  test_get_scorer.py  test_parse_profile.py
tests/digest/models/: test_post.py
tests/digest/models/profile/: test_daily_digest_hour_with_afternoon.py  test_daily_digest_zero_based_index_hour.py  test_is_at_least_one_day_since_last_daily_digest.py  test_is_at_least_one_hour_since_last_daily_digest.py  test_is_one_day_since_last_daily_digest.py  test_is_time_to_send_daily_digest.py
tests/digest/scorers/: test_get_scorer_from_name.py
tests/modal_runner/text_embeddings/: test_get_text_embeddings.py
tests/unicorn/components/: test_sponsor.py
tests/www/: fixtures.py
tests/www/views/: test_plus.py
unicorn/components/: reports.py  sponsor.py  timeline.py
unicorn/templates/unicorn/: reports.html  sponsor.html  timeline.html
www/: apps.py  robots.txt  urls.py  views.py
www/templates/www/: base.html  index.html  link.html  login.html  plus.html  post.html  posts.html
www/templatetags/: git.py  mastodon.py  settings_tags.py
